--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "static-nodejs-and-express-site",
   "version": "1.0.0",
   "description": "Static Node.js and Express Site",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
